--- a/taskone.html
+++ b/taskone.html
@@ -13,10 +13,10 @@
 	<div class="orange"></div>
 	<div class="orange"></div>
 	<div class="orange"></div>
-	<div class="orange2"></div>
 	<div class="orange"></div>
 	<div class="orange"></div>
-	<div class="orange2"></div>
+	<div class="orange"></div>
+	<div class="orange"></div>
 	<div class="orange"></div>
 	<div class="orange"></div>
 </div>
